common-lib/common-lib/src/main/java/com/example/disributed_lovable/CommonLib/common_lib/error/MethodArgumentNotValidException.java
package com.example.disributed_lovable.CommonLib.common_lib.error;

public class MethodArgumentNotValidException extends RuntimeException
{
    public MethodArgumentNotValidException(String message)
    {
        super(message);
    }
}
